fixed bug where logo gets cut off on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,6 @@ input, select, textarea {
 		}
 
 	}
-
 	html {
 		box-sizing: border-box;
 	}
@@ -3895,4 +3894,30 @@ input, select, textarea {
 
 	.slogan {
 		color: #ffffff;
+	}
+
+	.logo{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: auto;
+		margin-bottom: auto;
+		padding-top: 7vh;
+		width: auto;
+		height: 90vh;
+		overflow: hidden;
+	}
+
+	@media all and (orientation: portrait) {
+
+		.logo{
+			padding-left: 0vw;
+			padding-top: 0vh;
+			width: 90vw;
+			height: auto;
+		}
+
+		.phone{
+			height: auto !important;
+		}
 	}
